db upgrade detection improved.
